@@ -8,6 +8,14 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+=item *
+
+Added an optimization for Krang admin scripts that know they won't use any
+elements. This dramatically speeds up those admin scripts on systems with multiple
+element libraries. [Michael Peters]
+
+=item *
+
 Added interactive C<krang_to_utf8> script to ease conversions. [Noam Weinstein]
 
 =item * 
